Prevent content block images from overflowing their div

--- a/app/webroot/css/whyjustrun.css
+++ b/app/webroot/css/whyjustrun.css
@@ -120,6 +120,10 @@ form.thin-form {
     font-size: 100%;
 }
 
+.content-block img {
+    max-width: 100%;
+}
+
 .content-block textarea {
     font-size: 100%;
 }
